update：edit text

--- a/.env.template
+++ b/.env.template
@@ -1,8 +1,8 @@
 
-# Your openai api key. (required)
+# openai api key. (必填)
 OPENAI_API_KEY=sk-xxxx
 
-# Access passsword, separated by comma. (optional)
+# Access passsword,密码. (可选)
 CODE=your-password
 
 # You can start service behind a proxy
